--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -129,3 +129,13 @@ h1 {
     background-position:right center;
     background-repeat: no-repeat;
 }
+#hint{
+    /* display: none; */
+    animation: blink 1s steps(2, start) infinite;
+}
+
+@keyframes blink {
+    to {
+        color: rgb(13, 26, 24);
+    }
+}
