--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -16,6 +16,9 @@
         <param name="android-package" value="com.rjfun.cordova.admob.AdMobPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="Clipboard">
+        <param name="android-package" value="com.verso.cordova.clipboard.Clipboard" />
+    </feature>
     <name>WhatsApp To unsaved contact</name>
     <description>
             A sample Apache Cordova application that responds to the deviceready event.
@@ -40,4 +43,5 @@
     <preference name="StatusBarStyle" value="lightcontent" />
     <preference name="DisallowOverscroll" value="true" />
     <preference name="orientation" value="portrait" />
+    <preference name="fullscreen" value="true" />
 </widget>
