--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.mansoor.whatsapp" version="1.2.0" xmlns="http://www.w3.org/ns/widgets" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.mansoor.whatsapp" version="1.3.0" xmlns="http://www.w3.org/ns/widgets" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <feature name="Whitelist">
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
@@ -25,7 +25,13 @@
     <feature name="Permissions">
         <param name="android-package" value="com.android.plugins.Permissions" />
     </feature>
-    <name>WhatsApp To unsaved contact</name>
+    <feature name="OpenActivity">
+        <param name="android-package" value="com.modinify.openactivity.OpenActivity" />
+    </feature>
+    <feature name="IntentShim">
+        <param name="android-package" value="com.darryncampbell.cordova.plugin.intent.IntentShim" />
+    </feature>
+    <name>WhatsApp To unsaved number</name>
     <description>
             A sample Apache Cordova application that responds to the deviceready event.
         </description>
@@ -41,8 +47,10 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
-    <config-file parent="/manifest" target="AndroidManifest.xml">
+    <config-file parent="/*" target="AndroidManifest.xml">
+        <uses-permission android:name="android.permission.READ_CONTACTS" />
         <uses-permission android:name="android.permission.READ_CALL_LOG" />
+        <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     </config-file>
     <preference name="loglevel" value="DEBUG" />
     <preference name="AutoHideSplashScreen" value="false" />
